--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -89,21 +89,21 @@
           <section id="htmlcss" class="index__htmlcss">
             <h3 class="secTitle"><a href="/htmlcss"></a>HTML/CSS</h3>
             <ul class="index__list">
-              <li class="index__listItem">HTMLテンプレート
+              <li class="index__listItem"><a href="/htmlcss/snippet01.html">HTMLテンプレート</a>
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/htmlcss/snippet01.html#list01">ヘッダ</a></li>
                   <li class="childList__item"><a href="/htmlcss/snippet01.html#list02">フッタ</a></li>
                   <li class="childList__item"><a href="/htmlcss/snippet01.html#list03">都道府県一覧</a></li>
                 </ul>
               </li>
-              <li class="index__listItem">position: absolute;
+              <li class="index__listItem"><a href="/htmlcss/snippet02.html">position: absolute;</a>
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/htmlcss/snippet02.html#list01">親要素から位置を取得する</a></li>
                   <li class="childList__item"><a href="/htmlcss/snippet02.html#list02">上下左右中央揃え</a></li>
                   <li class="childList__item"><a href="/htmlcss/snippet02.html#list03">上下左右中央揃え（transform使用）</a></li>
                 </ul>
               </li>
-              <li class="index__listItem">display: flex;
+              <li class="index__listItem"><a href="/htmlcss/snippet03.html">display: flex;</a>
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/htmlcss/snippet03.html#list01">画像とテキストが同一BOXに入っている場合</a></li>
                 </ul>
@@ -116,7 +116,7 @@
             <ul class="index__list">
               <li class="index__listItem">SPメニュー
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">全画面メニュー</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet01.html#list01">全画面メニュー</a></li>
                 </ul>
               </li>
               <li class="index__listItem">プラグイン
