--- a/src/_html-original/javascript/snippet01.html
+++ b/src/_html-original/javascript/snippet01.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="javascriptPage">
+<body class="javascriptPage spMenu">
   <div class="l-container">
 
     <!-- l-header START -->
@@ -85,18 +85,12 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="template__inner">
-          <section id="list01" class="template__header">
-            <h3 class="secTitle">ヘッダ</h3>
-            <script src="https://gist.github.com/HiroyukiYokoi/44545d1c9eb14b8442ae0a293f37f69d.js"></script>
-          </section>
-          <section id="list02" class="template__footer">
-            <h3 class="secTitle">フッタ</h3>
-            <script src="https://gist.github.com/HiroyukiYokoi/12bf3e3a377bdbc4ff5c22160dc966dc.js"></script>
-          </section>
-          <section id="list03" class="template__prefectures">
-            <h3 class="secTitle">都道府県一覧</h3>
-            <script src="https://gist.github.com/HiroyukiYokoi/d361b544b6fd64e3cac9f2ed10040ce4.js"></script>
+        <div class="javascriptPage__inner">
+          <section id="list01" class="spMenu__header">
+            <h3 class="secTitle">全画面メニュー</h3>
+            <h4 class="languageType">HTML</h4>
+            <h4 class="languageType">CSS</h4>
+            <h4 class="languageType">JavaScript</h4>
           </section>
         </div>
       </main>
