--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -91,21 +91,24 @@
             <ul class="index__list">
               <li class="index__listItem"><a href="/htmlcss/snippet01.html">HTMLテンプレート</a>
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list01">ヘッダ</a></li>
-                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list02">フッタ</a></li>
-                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list03">都道府県一覧</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list01">ヘッダ<br>;;html_header</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list02">フッタ<br>;;html_footer</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list03">OGP（トップ）<br>;;html_ogp_top</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list04">OGP（下層）<br>;;html_ogp_lawer</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list05">Favicon<br>;;html_favicon</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list06">viewport<br>;;html_viewport</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list07">ダミー画像<br>;;html_dummy_simple<br>;;html_dummy_detail</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet01.html#list99">都道府県一覧<br>;;html_prefecture</a></li>
                 </ul>
               </li>
               <li class="index__listItem"><a href="/htmlcss/snippet02.html">position: absolute;</a>
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/htmlcss/snippet02.html#list01">親要素から位置を取得する</a></li>
-                  <li class="childList__item"><a href="/htmlcss/snippet02.html#list02">上下左右中央揃え</a></li>
-                  <li class="childList__item"><a href="/htmlcss/snippet02.html#list03">上下左右中央揃え（transform使用）</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet02.html#list01">親要素から位置を取得する<br>;;html_absolute_pt01<br>;;scss_absolute_pt01</a></li>
                 </ul>
               </li>
               <li class="index__listItem"><a href="/htmlcss/snippet03.html">display: flex;</a>
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/htmlcss/snippet03.html#list01">画像とテキストが同一BOXに入っている場合</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet03.html#list01">画像とテキストが同一BOXに入っている場合<br>（調査中）</a></li>
                 </ul>
               </li>
             </ul>
@@ -114,14 +117,22 @@
           <section id="javascript" class="index__javascript">
             <h3 class="secTitle">JavaScript</h3>
             <ul class="index__list">
+              <li class="index__listItem">JavaScriptテンプレート
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">メディアクエリ<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">footer下部固定<br>（準備中）</a></li>
+                </ul>
+              </li>
               <li class="index__listItem">SPメニュー
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/javascript/snippet01.html#list01">全画面メニュー</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet01.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br>（準備中）</a></li>
                 </ul>
               </li>
               <li class="index__listItem">プラグイン
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">Swiper</a></li>
+                  <li class="childList__item"><a href="">Swiper<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">EndlessRiver<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
@@ -132,7 +143,7 @@
             <ul class="index__list">
               <li class="index__listItem">SVGフィルタ
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">グレースケールを適用する</a></li>
+                  <li class="childList__item"><a href="">グレースケールを適用する<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
@@ -141,7 +152,11 @@
           <section id="php" class="index__php">
             <h3 class="secTitle">PHP</h3>
             <ul class="index__list">
-              <li class="index__listItem"><a href="">フォーム</a></li>
+              <li class="index__listItem">フォーム
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">バリデーション付き<br>（準備中）</a></li>
+                </ul>
+              </li>
             </ul>
           </section>
         </div>
