--- a/src/_html-original/javascript/snippet01.html
+++ b/src/_html-original/javascript/snippet01.html
@@ -86,11 +86,18 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="javascriptPage__inner">
-          <section id="list01" class="spMenu__header">
-            <h3 class="secTitle">全画面メニュー</h3>
-            <h4 class="languageType">HTML</h4>
-            <h4 class="languageType">CSS</h4>
-            <h4 class="languageType">JavaScript</h4>
+          <section id="list01" class="javascript__spMenu">
+            <h3 class="secTitle">SPメニュー</h3>
+
+            <h4 class="exampleTitle">全画面メニュー</h4>
+            <div>jQueryではclassの付け外しのみ。CSSでtransitionの設定。</div>
+            <iframe class="exam01" src="/javascript/sp_menu/exam01.html" width="320" height="568">
+              このページでは、インラインフレームを使用しています。
+              対応しているブラウザで閲覧してください。
+            </iframe>
+          </section>
+          <section class="absolute__header">
+            <h3 class="secTitle">上下左右中央揃え（transform使用）</h3>
           </section>
         </div>
       </main>
