JavaScript全画面メニュー更新

--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -111,6 +111,12 @@
                   <li class="childList__item"><a href="/htmlcss/snippet03.html#list01">画像とテキストが同一BOXに入っている場合<br>（調査中）</a></li>
                 </ul>
               </li>
+              <li class="index__listItem"><a href="/htmlcss/snippet04.html">疑似要素</a>
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">矢印</a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">画像のborder</a></li>
+                </ul>
+              </li>
             </ul>
           </section>
 
