--- a/src/_html-original/javascript/snippet01.html
+++ b/src/_html-original/javascript/snippet01.html
@@ -91,13 +91,15 @@
 
             <h4 class="exampleTitle">全画面メニュー</h4>
             <div>jQueryではclassの付け外しのみ。CSSでtransitionの設定。</div>
+            <div>HTML</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/5de9715f90b0745786985f93770fef6a.js"></script>
+            <div>CSS</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/acab7bab277454d364ac1f8d8ebf0705.js"></script>
+            <div>出力結果</div>
             <iframe class="exam01" src="/javascript/sp_menu/exam01.html" width="320" height="568">
               このページでは、インラインフレームを使用しています。
               対応しているブラウザで閲覧してください。
             </iframe>
-          </section>
-          <section class="absolute__header">
-            <h3 class="secTitle">上下左右中央揃え（transform使用）</h3>
           </section>
         </div>
       </main>
