SPメニューブラウザ幅リサイズ時のSPメニューのちらつき防止途中

--- a/src/_html-original/javascript/sp_menu/exam02.html
+++ b/src/_html-original/javascript/sp_menu/exam02.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="javascriptPage spMenu iframe">
+<body class="javascriptPage spMenu iframe notGood">
   <div class="l-container">
     <!--include START-->
     <header class="l-header">
