--- a/src/_html-original/htmlcss/snippet01.html
+++ b/src/_html-original/htmlcss/snippet01.html
@@ -26,9 +26,9 @@
 <meta name="twitter:image" content="http:///img/common/ogp.png">
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/css/vendor/ress.css">
 <link rel="stylesheet" href="/css/style.css">
-
 
 </head>
 
@@ -85,7 +85,7 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="htmlPage__inner">
+        <div class="html inner">
           <h2 class="c-childPage__title">HTMLテンプレート</h2>
           <section id="list01" class="template__header">
             <h3 class="secTitle">ヘッダ</h3>
@@ -147,11 +147,12 @@
     <!-- l-footer START -->
   </div>
   <!-- *** JavaScript *** -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+
 </body>
 
 </html>
