--- a/src/_html-original/htmlcss/snippet02.html
+++ b/src/_html-original/htmlcss/snippet02.html
@@ -26,9 +26,9 @@
 <meta name="twitter:image" content="http:///img/common/ogp.png">
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/css/vendor/ress.css">
 <link rel="stylesheet" href="/css/style.css">
-
 
 </head>
 
@@ -85,7 +85,7 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="htmlPage__inner">
+        <div class="html inner">
           <h2 class="c-childPage__title">position: absolute;</h2>
           <section id="list01" class="absolute__positionAcquisition">
             <h3 class="secTitle">親要素から位置を取得する</h3>
@@ -94,72 +94,72 @@
             <div>ボックスの高さは「display: flex;」による自動揃え。<br>
               各ボックスの最後のリンクに「position: absolute;」を、リンクの親要素であるボックスに「position: relative;」を使用することで、親要素から位置を取得。<br>
               リンクの親要素であるボックスにpadding-bottomを指定して、リンク要素の高さを担保。</div>
+              <div>出力結果</div>
+              <div class="Acquisition">
+                <ul class="Acquisition__list">
+                  <li class="Acquisition__item">
+                    <div class="Acquisition__SPbox">
+                      <div class="Acquisition__thumb">
+                        <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
+                      </div>
+                      <h4 class="Acquisition__title">タイトルタイトルタイトルタイトル</h4>
+                    </div>
+                    <p class="Acquisition__caption">短文短文。</p>
+                    <div class="c-moreLink textEN arrowRight">
+                      <a href="">VIEW PROJECTS</a>
+                    </div>
+                  </li>
+                  <li class="Acquisition__item">
+                    <div class="Acquisition__SPbox">
+                      <div class="Acquisition__thumb">
+                        <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
+                      </div>
+                      <h4 class="Acquisition__title">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</h4>
+                    </div>
+                    <p class="Acquisition__caption">in the world (not comparable)
+                    (idiomatic) Expletive used for emphasis, for example after an interrogative word.
+                    What in the world was that?
+                    Who in the world would want to do that?
+                    2012 April 29, Nathan Rabin, “TV: Review: THE SIMPSONS (CLASSIC): “Treehouse of Horror III” (season 4, episode 5; originally aired 10/29/1992)”:
+                    Writing a “Treehouse Of Horror”segment has to be both exhilarating and daunting. It’s exhilarating because it affords writers all the freedom in the world.
+                    1900, L. Frank Baum , The Wonderful Wizard of Oz Chapter 24
+                    "My darling child!" she cried, folding the little girl in her arms and covering her face with kisses. "Where in the world did you come from?"</p>
+                    <div class="c-moreLink textEN arrowRight">
+                      <a href="">VIEW PROJECTS</a>
+                    </div>
+                  </li>
+                  <li class="Acquisition__item">
+                    <div class="Acquisition__SPbox">
+                      <div class="Acquisition__thumb">
+                        <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
+                      </div>
+                      <h4 class="Acquisition__title">名詞としての「world」のイディオムやフレーズ</h4>
+                    </div>
+                    <p class="Acquisition__caption">áll òver the wórld	áll the wórld and his wífe
+                    áll the wórld óver	a wórld tòo mány [múch]
+                    be áll the wórld to…	brìng…ìnto the wórld
+                    cárry the wórld befòre one	còme ìnto the wórld
+                    déad to the wórld	for (áll) the wórld
+                    for áll the wórld lìke [as ìf，as thòugh]…	gìve the wórld (for [to dó]…)
+                    hàve [gèt] the bést of bóth wórlds	hàve the wórld befòre one
+                    in the wórld	It's a smáll wórld!
+                    màke a nóise in the wórld	màke one's wáy in the wórld
+                    méan áll the wórld to…	on tóp of the wórld
+                    òut of this wórld	sée the wórld
+                    sèt the wórld on fíre	the Wórld Federátion of Tráde Ùnions
+                    the wórld óver	thìnk the wórld of…
+                    (think) the wórld ówes one a líving	wórlds apàrt
+                    wórld withòut énd</p>
+                    <div class="c-moreLink textEN arrowRight">
+                      <a href="">VIEW PROJECTS</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             <div>HTML</div>
             <script src="https://gist.github.com/HiroyukiYokoi/cce16f1d0677f7255c91c6f0ca8b48a0.js"></script>
             <div>Sass</div>
             <script src="https://gist.github.com/HiroyukiYokoi/da90321922280afb1f06c5402fa02f91.js"></script>
-            <div>出力結果</div>
-            <div class="Acquisition">
-              <ul class="Acquisition__list">
-                <li class="Acquisition__item">
-                  <div class="Acquisition__SPbox">
-                    <div class="Acquisition__thumb">
-                      <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
-                    </div>
-                    <h4 class="Acquisition__title">タイトルタイトルタイトルタイトル</h4>
-                  </div>
-                  <p class="Acquisition__caption">短文短文。</p>
-                  <div class="c-moreLink textEN arrowRight">
-                    <a href="">VIEW PROJECTS</a>
-                  </div>
-                </li>
-                <li class="Acquisition__item">
-                  <div class="Acquisition__SPbox">
-                    <div class="Acquisition__thumb">
-                      <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
-                    </div>
-                    <h4 class="Acquisition__title">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</h4>
-                  </div>
-                  <p class="Acquisition__caption">in the world (not comparable)
-                  (idiomatic) Expletive used for emphasis, for example after an interrogative word.
-                  What in the world was that?
-                  Who in the world would want to do that?
-                  2012 April 29, Nathan Rabin, “TV: Review: THE SIMPSONS (CLASSIC): “Treehouse of Horror III” (season 4, episode 5; originally aired 10/29/1992)”:
-                  Writing a “Treehouse Of Horror”segment has to be both exhilarating and daunting. It’s exhilarating because it affords writers all the freedom in the world.
-                  1900, L. Frank Baum , The Wonderful Wizard of Oz Chapter 24
-                  "My darling child!" she cried, folding the little girl in her arms and covering her face with kisses. "Where in the world did you come from?"</p>
-                  <div class="c-moreLink textEN arrowRight">
-                    <a href="">VIEW PROJECTS</a>
-                  </div>
-                </li>
-                <li class="Acquisition__item">
-                  <div class="Acquisition__SPbox">
-                    <div class="Acquisition__thumb">
-                      <span><img src="http://placehold.it/339x226" alt="ダミー画像出力例シンプル"></span>
-                    </div>
-                    <h4 class="Acquisition__title">名詞としての「world」のイディオムやフレーズ</h4>
-                  </div>
-                  <p class="Acquisition__caption">áll òver the wórld	áll the wórld and his wífe
-                  áll the wórld óver	a wórld tòo mány [múch]
-                  be áll the wórld to…	brìng…ìnto the wórld
-                  cárry the wórld befòre one	còme ìnto the wórld
-                  déad to the wórld	for (áll) the wórld
-                  for áll the wórld lìke [as ìf，as thòugh]…	gìve the wórld (for [to dó]…)
-                  hàve [gèt] the bést of bóth wórlds	hàve the wórld befòre one
-                  in the wórld	It's a smáll wórld!
-                  màke a nóise in the wórld	màke one's wáy in the wórld
-                  méan áll the wórld to…	on tóp of the wórld
-                  òut of this wórld	sée the wórld
-                  sèt the wórld on fíre	the Wórld Federátion of Tráde Ùnions
-                  the wórld óver	thìnk the wórld of…
-                  (think) the wórld ówes one a líving	wórlds apàrt
-                  wórld withòut énd</p>
-                  <div class="c-moreLink textEN arrowRight">
-                    <a href="">VIEW PROJECTS</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
 
           </section>
         </div>
@@ -184,11 +184,12 @@
     <!-- l-footer START -->
   </div>
   <!-- *** JavaScript *** -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+
 </body>
 
 </html>
