--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -26,9 +26,9 @@
 <meta name="twitter:image" content="http:///img/common/ogp.png">
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/css/vendor/ress.css">
 <link rel="stylesheet" href="/css/style.css">
-
 
 </head>
 
@@ -131,8 +131,8 @@
               </li>
               <li class="index__listItem">SPメニュー
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/javascript/snippet01.html#list01">全画面メニュー</a></li>
-                  <li class="childList__item"><a href="/javascript/snippet01.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list01">全画面メニュー<br>;;html_sp_menu_pt01.html<br>;;scss_sp_menu_pt01<br>;;jq_sp_menu_pt01</a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br></a></li>
                 </ul>
               </li>
               <li class="index__listItem">プラグイン
@@ -187,11 +187,12 @@
     <!-- l-footer START -->
   </div>
   <!-- *** JavaScript *** -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+
 </body>
 
 </html>
