--- a/src/_html-original/javascript/snippet02.html
+++ b/src/_html-original/javascript/snippet02.html
@@ -26,9 +26,9 @@
 <meta name="twitter:image" content="http:///img/common/ogp.png">
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/css/vendor/ress.css">
 <link rel="stylesheet" href="/css/style.css">
-
 
 </head>
 
@@ -85,21 +85,43 @@
 
     <div class="l-contents">
       <main class="l-main">
-        <div class="javascriptPage__inner">
-          <section id="list01" class="javascript__spMenu">
-            <h3 class="secTitle">SPメニュー</h3>
+        <div class="javascript inner">
+          <h2 class="c-childPage__title">SPメニュー</h2>
 
-            <h4 class="exampleTitle">全画面メニュー</h4>
+          <section id="list01" class="javascript__spMenu">
+            <h3 class="secTitle">全画面メニュー</h3>
+            <h4 class="exampleTitle">上下スライド + opacity</h4>
             <div>jQueryではclassの付け外しのみ。CSSでtransitionの設定。</div>
-            <div>HTML</div>
-            <script src="https://gist.github.com/HiroyukiYokoi/5de9715f90b0745786985f93770fef6a.js"></script>
-            <div>CSS</div>
-            <script src="https://gist.github.com/HiroyukiYokoi/acab7bab277454d364ac1f8d8ebf0705.js"></script>
             <div>出力結果</div>
             <iframe class="exam01" src="/javascript/sp_menu/exam01.html" width="320" height="568">
               このページでは、インラインフレームを使用しています。
               対応しているブラウザで閲覧してください。
             </iframe>
+            <div>HTML</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/5de9715f90b0745786985f93770fef6a.js"></script>
+            <div>CSS</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/acab7bab277454d364ac1f8d8ebf0705.js"></script>
+            <div>JavaScript</div>
+            <script src="https://gist.github.com/HiroyukiYokoi/27975009f6f0e31fd65108116920aa6f.js"></script>
+          </section>
+
+          <section id="list02" class="javascript__spMenu">
+            <h3 class="secTitle">ブラウザ幅リサイズ時のSPメニューのちらつき防止</h3>
+            <div>何もしていないとSPのメディアクエリが有効になった時点で、SPメニューがちらつく。</div>
+            <div id="resizable01" class="ui-widget-content">
+              <iframe class="exam02" id="exam02" src="/javascript/sp_menu/exam02.html">
+                このページでは、インラインフレームを使用しています。
+                対応しているブラウザで閲覧してください。
+              </iframe>
+            </div>
+            <div>JavaScriptでメディアクエリを追加して、setTimeoutを用いることで、メディアクエリの有効化を一瞬遅らせるのがポイント。<br>
+            また、JavaScriptの方でclassの追加削除をする。</div>
+            <div id="resizable02" class="ui-widget-content">
+              <iframe class="exam03" id="exam03" src="/javascript/sp_menu/exam01.html">
+                このページでは、インラインフレームを使用しています。
+                対応しているブラウザで閲覧してください。
+              </iframe>
+            </div>
           </section>
         </div>
       </main>
@@ -123,11 +145,12 @@
     <!-- l-footer START -->
   </div>
   <!-- *** JavaScript *** -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><!--★IE9.10.11 support-->
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
+<script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
+
 </body>
 
 </html>
