--- a/src/_html-original/javascript/snippet02.html
+++ b/src/_html-original/javascript/snippet02.html
@@ -86,7 +86,7 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="javascript inner">
-          <h2 class="c-childPage__title">SPメニュー</h2>
+          <h2 class="c-childPage__title">SPメニュー<span class="red">※要検討</span></h2>
 
           <section id="list01" class="javascript__spMenu">
             <h3 class="secTitle">全画面メニュー</h3>
