--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -126,13 +126,14 @@
               <li class="index__listItem">JavaScriptテンプレート
                 <ul class="index__childList">
                   <li class="childList__item"><a href="">メディアクエリ<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">IE, Edge判定<br>（準備中）</a></li>
                   <li class="childList__item"><a href="">footer下部固定<br>（準備中）</a></li>
                 </ul>
               </li>
               <li class="index__listItem">SPメニュー
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="/javascript/snippet02.html#list01">全画面メニュー<br>;;html_sp_menu_pt01.html<br>;;scss_sp_menu_pt01<br>;;jq_sp_menu_pt01</a></li>
-                  <li class="childList__item"><a href="/javascript/snippet02.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br></a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list01">全画面メニュー<br><span class="red">※要検討</span></a></li>
+                  <li class="childList__item"><a href="/javascript/snippet02.html#list02">ブラウザ幅リサイズ時のSPメニューのちらつき防止<br><span class="red">※要検討</span></a></li>
                 </ul>
               </li>
               <li class="index__listItem">プラグイン
