--- a/src/_html-original/php/form/thanks.html
+++ b/src/_html-original/php/form/thanks.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>SPメニュー</title>
+  <title>title</title>
   <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -32,49 +32,33 @@
 
 </head>
 
-<body class="javascriptPage spMenu iframe">
+<body class="phpPage form">
   <div class="l-container">
     <!--include START-->
-    <header class="l-header">
-      <div class="l-header__logo">
-        <h1 class="l-header__logoImg">
-          <a href="">
-            <div><img src="http://placehold.it/150x150/b7ab86/666&amp;text=logo" alt="ダミー画像出力例詳細付き"></div>
-          </a>
-        </h1>
-      </div>
-      <div class="l-gNav__sp">
-        <div class="l-gNav__btn"><a href="#"><span>OPEN</span></a></div>
-      </div>
-      <nav class="l-gNav is-close">
-        <div class="l-gNav__close"><a href="#"><span>CLOSE</span></a></div>
-        <ul class="l-gNav__list">
-          <li class="l-gNav__listItem">
-            <a href="">
-              <span class="l-gNav__listItemEn">TOP</span>
-              <span class="l-gNav__listItemJp">トップ</span>
-            </a>
-          </li>
-          <li class="l-gNav__listItem">
-            <a href="">
-              <span class="l-gNav__listItemEn">NEWS</span>
-              <span class="l-gNav__listItemJp">ニュース</span>
-            </a>
-          </li>
-          <li class="l-gNav__listItem">
-            <a href="">
-              <span class="l-gNav__listItemEn">OUR MISSION</span>
-              <span class="l-gNav__listItemJp">私たちの仕事</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!--include END-->
-
+<header class="l-header">
+  <div class="l-header__logo">
+    <a href="/">
+      <h1 class="site_title">snippets</h1>
+    </a>
   </div>
-  <!-- l-footer START -->
-  <!--include START-->
+</header>
+<!--include END-->
+
+    <div class="l-contents">
+      <main class="l-main">
+        <section class="Contact complete">
+          <div class="Contact__complete">
+            お問い合わせいただき、ありがとうございました。<br>
+            追って担当者からご連絡申しあげますので、少々お待ちくださいませ。
+          </div>
+
+          <div class="ContactComplete__backLink c-backLink">
+            <a href="/">トップページへ戻る</a>
+          </div>
+        </section>
+      </main>
+    </div>
+    <!--include START-->
 <div class="l-pagetop">
   <a href="#"><span>TOPへ</span></a>
 </div>
@@ -89,8 +73,8 @@
 </footer>
 <!--include END-->
 
-  <!-- l-footer START -->
-<!-- *** JavaScript *** -->
+  </div>
+  <!-- *** JavaScript *** -->
 <script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
 <script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
@@ -100,5 +84,4 @@
 <script src="/js/common.js"></script>
 
 </body>
-
 </html>
