--- a/src/_html-original/htmlcss/snippet01.html
+++ b/src/_html-original/htmlcss/snippet01.html
@@ -150,6 +150,8 @@
 <script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" charset='utf-8'></script>
 <script type='text/javascript' language='javascript' src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" charset='utf-8'></script>
 
+<script type="text/javascript" src="/js/vendor/jquery.mousewheel.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery-scrollpanel-0.7.0.min.js"></script>
 <script src="/js/vendor/jquery.matchHeight-min.js"></script>
 <script src="/js/common.js"></script>
 
