--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -62,11 +62,11 @@
         <span class="l-gNav__listItemEn">HTML/CSS</span>
       </a>
     </li>
-    <li class="l-gNav__listItem">
+    <!-- <li class="l-gNav__listItem">
       <a href="/#javascript">
         <span class="l-gNav__listItemEn">JavaScript</span>
       </a>
-    </li>
+    </li> -->
     <li class="l-gNav__listItem">
       <a href="/#svg">
         <span class="l-gNav__listItemEn">SVG</span>
@@ -101,6 +101,12 @@
                   <li class="childList__item"><a href="/htmlcss/snippet01.html#list99">都道府県一覧<br>;;html_prefecture</a></li>
                 </ul>
               </li>
+              <li class="index__listItem"><a href="/htmlcss/snippet01.html">CSSテンプレート</a>
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/htmlcss/snippet06.html#list01">リスト・アイテム<br></a></li>
+                  <li class="childList__item"><a href="/htmlcss/snippet06.html#list02">::before、::after<br></a></li>
+                </ul>
+              </li>
               <li class="index__listItem"><a href="/htmlcss/snippet02.html">position: absolute;</a>
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/htmlcss/snippet02.html#list01">親要素から位置を取得する<br>;;html_absolute_pt01<br>;;scss_absolute_pt01</a></li>
@@ -117,22 +123,17 @@
                   <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">画像のborder<br>（準備中）</a></li>
                 </ul>
               </li>
-              <li class="index__listItem"><a href="/htmlcss/snippet04.html">テンプレートエンジン（基礎出来てから）</a>
-                <ul class="index__childList">
-                  <li class="childList__item"><a href="/htmlcss/snippet04.html#list01">Pug<br>（準備中）</a></li>
-                </ul>
-              </li>
             </ul>
           </section>
 
-          <section id="javascript" class="index__javascript">
+          <!-- <section id="javascript" class="index__javascript">
             <h3 class="secTitle">JavaScript</h3>
             <ul class="index__list">
               <li class="index__listItem">JavaScriptテンプレート
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">メディアクエリ<br>（準備中）</a></li>
                   <li class="childList__item"><a href="">IE, Edge判定<br>（準備中）</a></li>
                   <li class="childList__item"><a href="">footer下部固定<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">フォームの初期選択肢の文字色を変える<br>（準備中）</a></li>
                 </ul>
               </li>
               <li class="index__listItem">SPメニュー
@@ -145,11 +146,12 @@
                 <ul class="index__childList">
                   <li class="childList__item"><a href="">Swiper<br>（準備中）</a></li>
                   <li class="childList__item"><a href="">EndlessRiver<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">スクロールバーのデザイン変更<br>（準備中）</a></li>
                 </ul>
               </li>
               <li class="index__listItem">Ajax
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">Swiper<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">（準備中）</a></li>
                 </ul>
               </li>
               <li class="index__listItem">自作JavaScript
@@ -157,8 +159,14 @@
                   <li class="childList__item"><a href="">スライダー<br>（準備中）</a></li>
                 </ul>
               </li>
+              <li class="index__listItem">今後解決したい課題
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">ローディング画面を表示する<br>（勉強中）</a></li>
+                  <li class="childList__item"><a href="">メディアクエリ<br>（準備中）</a></li>
+                </ul>
+              </li>
             </ul>
-          </section>
+          </section> -->
 
           <section id="svg" class="index__svg">
             <h3 class="secTitle">SVG</h3>
@@ -177,27 +185,38 @@
               <li class="index__listItem">フォーム
                 <ul class="index__childList">
                   <li class="childList__item"><a href="/php/snippet01.html#list01">一式<br>（準備中）</a></li>
-                </ul>
-                <ul class="index__childList">
                   <li class="childList__item"><a href="/php/snippet01.html#list02">バリデーション<br>（準備中）</a></li>
                 </ul>
               </li>
+              <!-- <li class="index__listItem">WordPress
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="/php/snippet01.html#list01">（準備中）</a></li>
+                </ul>
+              </li> -->
             </ul>
           </section>
 
-          <h2>番外編</h2>
+          <!-- <h2 class="c-childPage__title">番外編</h2>
           <section id="git" class="index__git">
-            <h3 class="secTitle">Git</h3>
+            <h3 class="secTitle">コマンド</h3>
             <ul class="index__list">
-              <li class="index__listItem">覚えておきたいコマンド
+              <li class="index__listItem">Git
                 <ul class="index__childList">
-                  <li class="childList__item"><a href="">（準備中）</a></li>
+                  <li class="childList__item"><a href="">現在存在するリモートブランチの一覧を表示する<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">特定の文字列を含んだマージ済みのリモートブランチを一括削除する<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">無効なリモートブランチを自動で判別して掃除する<br>（準備中）</a></li>
+                  <li class="childList__item"><a href="">ターミナルからGitを管理する<br>（準備中）</a></li>
+                </ul>
+              </li>
+              <li class="index__listItem">便利コマンド
+                <ul class="index__childList">
+                  <li class="childList__item"><a href="">ターミナルからアプリをダウンロードする<br>（準備中）</a></li>
                 </ul>
               </li>
             </ul>
-          </section>
+          </section> -->
 
-          <section id="ruby" class="index__ruby">
+          <!-- <section id="ruby" class="index__ruby">
             <h3 class="secTitle">Ruby &amp; Ruby on Rails</h3>
             <ul class="index__list">
               <li class="index__listItem">環境構築
@@ -216,7 +235,7 @@
                 </ul>
               </li>
             </ul>
-          </section>
+          </section> -->
 
         </div>
       </main>
