内容差し替え

--- a/src/_html-original/htmlcss/snippet03.html
+++ b/src/_html-original/htmlcss/snippet03.html
@@ -199,13 +199,9 @@
   <a href="#"><span>TOPへ</span></a>
 </div>
 <footer class="l-footer">
-  <!-- <div class="l-footer__text">
-    <div class="l-footer__nav">
-      <ul class="l-footer__navList">
-        <a href="/"><span>TOP</span></a>
-      </ul>
-    </div>
-  </div> -->
+  <div class="l-footer__img">
+    <img src="/img/common/htgmip.png" width="20" height="20" alt="">
+  </div>
 </footer>
 <!--include END-->
 
