--- a/src/_html-original/index.html
+++ b/src/_html-original/index.html
@@ -59,6 +59,16 @@
     <div class="l-contents">
       <main class="l-main">
         <div class="index__inner">
+          <ul class="index__list">
+            <li class="index__listItem">
+              <a href="/css_animation/">
+                <h3 class="listItem__title">CSS animation</h3>
+                <div class="listItem__image">
+                  <img src="/img/index/CSS3_Logo.svg" width="350" height="150" alt="CSS3_Logo">
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </main>
     </div>
@@ -68,13 +78,9 @@
   <a href="#"><span>TOPへ</span></a>
 </div>
 <footer class="l-footer">
-  <!-- <div class="l-footer__text">
-    <div class="l-footer__nav">
-      <ul class="l-footer__navList">
-        <a href="/"><span>TOP</span></a>
-      </ul>
-    </div>
-  </div> -->
+  <div class="l-footer__img">
+    <img src="/img/common/htgmip.png" width="20" height="20" alt="">
+  </div>
 </footer>
 <!--include END-->
 
